# agent-gateway

./: .gitignore  Makefile  README.md  litellm_config.yaml  pyproject.toml
.github/workflows/: build-and-sign.yml  pr.yml
deploy/: Dockerfile
deploy/dev/: compose.yaml
deploy/helm/: values.yaml
deploy/helm/templates/: deployment.yaml  linkerd-authz.yaml  linkerd-meshtls.yaml  litellm-configmap.yaml
docs/: api.md  failure-modes.md  hooks.md  policy.md  threat-model.md
policy/: authz.rego  authz_test.rego
policy/data/: permissions.json
src/ag_gateway/: __main__.py  config.py  server.py  server_ingress.py
src/ag_gateway/hooks/: audit.py  auth_oidc.py  cost_cap.py  envelope.py  llm_guard.py  opa_authz.py  opa_client.py  scrub_engine.py  scrub_inbound.py  scrub_outbound.py  tokenizer_client.py
src/ag_gateway/jobs/: k8s.py  launcher.py  result.py
src/ag_gateway/mcp_proxy/: client.py  handshake.py  registry.py  request_state.py  routes.py
src/ag_gateway/obs/: logging.py  metrics.py  quarantine.py  tracing.py
src/ag_gateway/prompts/: bundle.py  bundle_view.py  registry.py
src/ag_gateway/schemas/: scrub_categories.py  validate.py
src/ag_gateway/tools/: catalog.py
tests/: conftest.py
tests/conformance/: test_aad_binding.py  test_no_plaintext.py
tests/fixtures/bundle-v1/: bundle-manifest.json
tests/fixtures/bundle-v1/schemas/: bundle-manifest.json  final-response.json  (+2 more)
tests/integration/: compose.yaml  conftest.py  test_full_pipeline.py
tests/unit/: test_audit.py  test_auth_oidc.py  test_bundle.py  test_bundle_digest_route.py  test_bundle_view.py  test_compile_policy.py  test_config.py  test_cost_cap.py  test_envelope.py  test_final_response_parser.py  test_fuzz_scrub.py  test_gauge_llm_guard_enabled.py  test_jobs_k8s.py  test_jobs_launcher.py  test_jobs_result.py  test_lint_no_plaintext_logs.py  test_llm_guard_client.py  test_logging.py  test_mcp_client.py  test_mcp_handshake.py  test_mcp_registry.py  test_mcp_routes.py  test_metrics.py  test_opa_authz.py  test_opa_client.py  test_prompt_registry.py  test_quarantine.py  test_schema_validate.py  test_scrub_categories.py  test_scrub_engine.py  test_scrub_inbound.py  test_scrub_outbound.py  test_server_ingress.py  test_server_main.py  test_tokenizer_client.py  test_tool_catalog.py
tools/: lint_no_plaintext_logs.py
tools/compile-policy/: main.py
(+18 files in other folders)
